2008-06-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* HACKING: Update with new patch.
	* Makefile.am: Add patch.
	* Makefile.in,
	* configure: Regenerated.
	* patches/icedtea-idl.patch:
	New patch to fix licensing on IDL files.
	See PR141.

2008-06-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Only add rhino patch when
	WITH_RHINO is turned on.
	* Makefile.in: Regenerated.
	* acinclude.m4: Provide the option to turn off
	rhino support.
	* configure,
	* aclocal.m4:
	Regenerated.
	
2008-06-25  Gary Benson  <gbenson@redhat.com>

	* HACKING: Updated.

2008-06-25  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* acinclude.m4: Remove ENABLE_NETX_PLUGIN.
	* Makefile.am (NETX_PLUGIN): Remove conditional.
	(ICEDTEA_PATCHES): Hard-code netx-plugin patch.
	* Makefile.in: Regenerate.
	* configure.ac: Remove ENABLE_NETX_PLUGIN.
	* configure: Regenerate.
	* rt/net/sourceforge/jnlp/NetxPanel.java (runLoader): Exit when a
	LaunchException is caught.  Remove keyboard input FIXME comment.
	* rt/net/sourceforge/jnlp/Launcher.java: Fix LCInit typos.

2008-06-24  Lillian Angel  <langel@redhat.com>

	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* configure.ac: Moved FIND_RHINO out of conditional so it is checked
	for under all conditions.
	* patches/icedtea-fonts.patch: Reverted. Dejavu-lgc-fonts are not
	default on F9.

2008-06-24  Gary Benson  <gbenson@redhat.com>

	* acinclude.m4
	(SET_CORE_BUILD): Removed.
	(SET_CORE_OR_SHARK_BUILD): New macro.
	* configure.ac
	Replaced call to SET_CORE_BUILD with SET_CORE_OR_SHARK_BUILD.
	(LLVM_CFLAGS): New substitution.
	(LLVM_LDFLAGS): Likewise.
	(LLVM_LIBS): Likewise.
	* configure: Regenerated.

	* Makefile.am
	(ICEDTEA_ENV): Pass flags for Shark.
	(ICEDTEA_ENV_ECJ): Likewise.
	(stamps/ports.stamp): Link in Shark files.
	(stamps/ports-ecj.stamp): Likewise.
	(ICEDTEA_PATCHES): Apply Shark patches.
	(hotspot): Fix libjvm.so location.
	* Makefile.in: Regenerated.
